tests/NormalTests/paczka1/fuzzy1/65261038.err
Error in line 10: S971 S971 205,12
Error in line 1: RDZiuDEeAE A731 79,3
Error in line 14: RDZiuDEeAE S337 6,0
Error in line 4: V00lBAcEV07 S971 44,0
Error in line 16: hNvfUZMx S971 96,8
Error in line 5: S971 S971 83,4
Error in line 15: RDZiuDEeAE A731 26,5
Error in line 25: RDZiuDEeAE S971 84,6
Error in line 38: RDZiuDEeAE S337 73,9
